--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     ]
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.17.0",
+    "@headlessui/react": "^1.6.2",
+    "@heroicons/react": "^1.0.6",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
@@ -48,17 +51,11 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
-    "eslint": "8.13.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "gulp": "^4.0.2",
     "gulp-inline-source": "^4.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.1.3",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.12",
-    "prettier": "^2.6.2",
-    "prettier-plugin-tailwindcss": "^0.1.8"
+    "postcss": "^8.4.12"
   }
 }
