--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@tailwindcss/typography": "^0.5.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.0.24"
   },
