--- a/package.json
+++ b/package.json
@@ -39,14 +39,18 @@
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.17.0",
+    "@emailjs/browser": "^3.6.2",
     "@headlessui/react": "^1.6.2",
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
     "react": "^18.0.0",
+    "react-back-to-top": "^1.0.3",
     "react-dom": "^18.0.0",
+    "react-floaterjs": "^1.0.6",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.0.24"
   },
