--- a/package.json
+++ b/package.json
@@ -45,10 +45,15 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
+    "i18next": "^21.8.7",
+    "i18next-browser-languagedetector": "^6.1.4",
     "react": "^18.0.0",
     "react-back-to-top": "^1.0.3",
+    "react-country-flag": "^3.0.2",
     "react-dom": "^18.0.0",
     "react-floaterjs": "^1.0.6",
+    "react-i18next": "^11.16.10",
+    "react-notifications": "^1.7.3",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
