--- a/package.json
+++ b/package.json
@@ -56,8 +56,26 @@
     "react-notifications": "^1.7.3",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "tailwindcss": "^3.0.24"
+    "react-scripts": "4.0.3",
+    "tailwindcss": "^3.0.24",
+    "metamask-react": "^2.3.0",
+    "web3": "^1.6.0",
+    "os": "^0.1.2",
+    "os-browserify": "^0.3.0",
+    "assert": "^2.0.0",
+    "buffer": "^5.7.1",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
+    "stream": "^0.0.2",
+    "web-vitals": "^2.1.4",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.3",
+    "@mui/styled-engine-sc": "^5.5.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
@@ -67,5 +85,8 @@
     "gulp-replace": "^1.1.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.12"
+  },
+  "browser": {
+    "crypto": false
   }
 }
