--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 INLINE_RUNTIME_CHUNK=false
 GENERATE_SOURCEMAP=false
 SKIP_PREFLIGHT_CHECK=true
+CONTRACT_ADDRESS=0x3d155ac6fccf3ea5d5aaacdf33d9fbf09bb923ed
