--- a/package.json
+++ b/package.json
@@ -40,13 +40,28 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.17.0",
     "@emailjs/browser": "^3.6.2",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@headlessui/react": "^1.6.2",
     "@heroicons/react": "^1.0.6",
+    "@mui/material": "^5.5.3",
+    "@mui/styled-engine-sc": "^5.5.2",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
+    "axios": "^0.27.2",
+    "buffer": "^5.7.1",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
     "i18next": "^21.8.7",
     "i18next-browser-languagedetector": "^6.1.4",
+    "metamask-react": "^2.3.0",
+    "os": "^0.1.2",
+    "os-browserify": "^0.3.0",
     "react": "^18.0.0",
     "react-back-to-top": "^1.0.3",
     "react-country-flag": "^3.0.2",
@@ -57,25 +72,11 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
-    "tailwindcss": "^3.0.24",
-    "metamask-react": "^2.3.0",
-    "web3": "^1.6.0",
-    "os": "^0.1.2",
-    "os-browserify": "^0.3.0",
-    "assert": "^2.0.0",
-    "buffer": "^5.7.1",
-    "crypto": "^1.0.1",
-    "crypto-browserify": "^3.12.0",
     "stream": "^0.0.2",
+    "styled-components": "^5.3.5",
+    "tailwindcss": "^3.0.24",
     "web-vitals": "^2.1.4",
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.5.3",
-    "@mui/styled-engine-sc": "^5.5.2",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "styled-components": "^5.3.5"
+    "web3": "^1.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
